# DeepPlan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plan.py  pytorch.patch  requirements.txt  util.py
models/: __init__.py
models/vision/: resnet.py
plans/V100/bert_base/: README.md
plans/V100/bert_large/: README.md
plans/V100/gpt2/: README.md
plans/V100/gpt2_medium/: README.md
plans/V100/resnet101/: README.md
plans/V100/resnet50/: README.md
plans/V100/roberta_base/: README.md
plans/V100/roberta_large/: README.md
proto/: deepcache.proto  deepplan_pb2.py
scripts/: create_all_plans.sh  download_azure_trace_dataset.sh
scripts/experiments/pcm_pcie/: run.sh
scripts/fig10/: graph.py  run.sh
scripts/fig12/: graph.py  run.sh
scripts/fig13/: graph.py  run.sh
scripts/fig14/: graph.py  run.sh
src/: CMakeLists.txt  benchmark.cpp  client.cpp  client.h  controller.cpp  controller.h  engine.cpp  engine.h  model.cpp  model.h  server.cpp  server.h  server_api.h  util.cpp  util.h
src/client/: :q  azure.h  client.cpp  client.h  workload.cpp  workload.h
src/core/: engine.cpp  engine.h  model.cpp  model.h
src/deepplan/: engine.cpp  engine.h  model.cpp  model.h
src/experiments/: CMakeLists.txt
src/experiments/pcm_pcie/: pcm_pcie.cpp
src/network/: message.h  network.cpp  network.h  server_api.cpp  server_api.h  session.cpp  session.h
src/server/: controller.cpp  controller.h  model_manager.cpp  model_manager.h  server.cpp  server.h  worker.cpp  worker.h
